# bloomy-mcp

./: .dockerignore  .envrc  .gitignore  Dockerfile  pyproject.toml
deploy/: container-app.yaml
src/bloomy_mcp/: __init__.py  client.py  formatters.py  introspection.py  middleware.py  operations.py  server.py  tools.py
